Added suggestions from coderabbit